--- a/css/contactPopUp.css
+++ b/css/contactPopUp.css
@@ -12,6 +12,7 @@
 }
 
 #messageZone h1 {
+    margin: 1em;
     flex-basis: 100%;
     text-align: center;
 }
@@ -21,15 +22,19 @@
     height: 70%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: flex-end;
+    list-style: none;
 }
 
 .contact {
+    padding: 1em;
     width: 60%;
     align-self: flex-start;
 }
 
 .me {
+    text-align: end;
+    padding: 1em;
     width: 60%;
     align-self: flex-end;
 }
