--- a/css/MovementZone.css
+++ b/css/MovementZone.css
@@ -8,6 +8,8 @@ body{
     width: 100vw;
     height: 100vh;
     display: flex;
+    background-image: url("../img/cool-background.png");
+    background-size: cover;
 }
 
 main {
@@ -17,11 +19,16 @@ main {
 }
 #ZoneContact{
     width: 95%;
-    height: 88%;
+    height: 90%;
     margin: 2%;
     background-color: rgb(219, 219, 219);
 }
 img{
     width: 50px;
     height: 50px;
+}
+.Contacts{
+    position: relative;
+    left: 50%;
+    top: 50%;
 }
