--- a/css/contactPopUp.css
+++ b/css/contactPopUp.css
@@ -20,8 +20,8 @@
     width: 100%;
     height: 70%;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
+    flex-direction: column-reverse;
+    justify-content: flex-start;
     list-style: none;
 }
 
