--- a/css/contactPopUp.css
+++ b/css/contactPopUp.css
@@ -19,6 +19,7 @@
 #messageZone ul {
     width: 100%;
     height: 70%;
+    overflow-y: scroll;
     display: flex;
     flex-direction: column-reverse;
     justify-content: flex-start;
