--- a/css/MovementZone.css
+++ b/css/MovementZone.css
@@ -37,3 +37,46 @@ img{
     position: absolute;
     
 }
+
+#openLogin{
+    border: 1px black solid;
+    height: 20px;
+    width: 35px;
+    background-color: white;
+    margin-left: 10px;
+}
+
+#openLogin:hover{
+    cursor: pointer;
+}
+
+#sectionLogin{
+    display: none;
+    align-self: center;
+    width: 20%;
+    height: 40%;
+    margin-left: 40%;
+    background-color: rgb(67, 180, 174);
+    border-radius: 12px;
+    box-shadow: 20px 10px 5px rgb(83, 73, 73);
+}
+fieldset{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    border: none;
+}
+form {
+    height: 100%;
+}
+
+.loginElement{
+    width: 30%;
+    align-self: center;
+
+}
+
+#username, #password{
+    margin-bottom: 24%;
+}
